# brpc_faiss_server

./: CMakeLists.txt  Dockerfile  README.md  start.sh
protobuf/: basic_server.proto
python/: test.py  test.sh
python/test_concurrent/: add.py  config.py  data.py  echo.py  run.sh  search.py  status.py
src/: config.h  database.cc  database.h  faiss_index.cc  faiss_index.h  interfaces.cc  interfaces.h  io_rocksdb.cc  io_rocksdb.h  run_server.cc  server_create.cc  server_create.h  server_delete.cc  server_delete.h  server_query.cc  server_query.h  server_restore.cc  server_restore.h  server_update.cc  server_update.h  wrapper_server.h
src/tensor/: linalg.cc  linalg.h
src/utils/: base64.cc  base64.h  cstring.cc  cstring.h  log.cc  log.h
